--- a/_config.ayer.yml
+++ b/_config.ayer.yml
@@ -4,10 +4,10 @@ menu:
   归档: /archives
   分类: /categories
   标签: /tags
-  旅行: /tags/旅行/
-  摄影: http://shenyu-vip.lofter.com
+  翻译: /tags/旅行/
+  开源: /tags/开源/
   友链: /friends
-  关于我: /2019/about
+  关于我: /2023/about
 
 # 站点次标题和打字动效
 # https://github.com/mattboldt/typed.js
@@ -239,15 +239,6 @@ minivaline:
 # 可以根据需要自行增加ad_3，ad_4...，留空则不显示，建议图片和url不要带ad等关键词，否则可能会被adblock等插件屏蔽
 ads:
   ad_1:
-    title: 云服务器限时秒杀
-    img: https://pic.imgdb.cn/item/62174b452ab3f51d912a5ccc.jpg
-    url: https://curl.qcloud.com/kvO7hb43
-    width: 300
-  ad_2:
-    title: vultr优惠vps
-    img: https://pic.imgdb.cn/item/62174b452ab3f51d912a5cd7.png
-    url: https://www.vultr.com/?ref=8630075
-    width: 300
 
 # 网站开启加密访问，密码可设置任何字符
 lock:
