--- a/_config.ayer.yml
+++ b/_config.ayer.yml
@@ -4,8 +4,8 @@ menu:
   归档: /archives
   分类: /categories
   标签: /tags
-  翻译: /tags/旅行/
-  开源: /tags/开源/
+  翻译: /categories/旅行/
+  项目: /categories/项目/
   友链: /friends
   关于我: /2023/about
 
