--- a/_config.ayer.yml
+++ b/_config.ayer.yml
@@ -7,7 +7,7 @@ menu:
   翻译: /categories/翻译/
   项目: /categories/项目/
   友链: /friends
-  关于我: /2023/11/26/about/
+  关于我: /about/
 
 # 站点次标题和打字动效
 # https://github.com/mattboldt/typed.js
@@ -148,7 +148,7 @@ google_analytics: ""
 baidu_analytics: ""
 
 # Mathjax数学公式
-mathjax: false
+mathjax: true
 
 # Katex数学公式(allpost设置为false时只有头部设置math:true的文章才开启)
 # 需要更换hexo渲染器，npm un hexo-renderer-marked -S && npm i hexo-renderer-markdown-it-katex -S
