--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,7 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: ayer
+theme_config: _config.ayer.yml
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
