--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,10 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: projects/**
+skip_render: 
+  - projects/**
+  - api/**
+  - requirements.txt
 
 # Writing
 new_post_name: :title.md # File name of new posts
