--- a/_config.ayer.yml
+++ b/_config.ayer.yml
@@ -5,8 +5,9 @@ menu:
   分类: /categories
   标签: /tags
   翻译: /categories/翻译/
+  gitbook: /gitbook/
   项目: /categories/项目/
-  友链: /friends
+  友链: /friends/
   关于我: /about/
 
 # 站点次标题和打字动效
