--- a/_config.ayer.yml
+++ b/_config.ayer.yml
@@ -24,15 +24,15 @@ subtitle:
   showCursor: false # 是否显示光标
 
 # 网站图标和侧边栏logo
-favicon: /favicon.ico
-logo: /images/ayer-side.svg
+favicon: favicon.svg
+logo: /images/mountain.svg
 
 # 封面配置
 # enable-是否启用封面；path-封面背景图；logo-封面logo
 cover:
   enable: true
   path: /images/cover8.jpg # /source/images目录下附送多张美图，可更换
-  logo: /images/mountain.svg，如果不要直接设置成false
+  logo: false # 如果不要直接设置成false
 
 # 页面顶部进度条
 progressBar: true
