--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render: 
-  - projects/**
+  - projects/project-**/**
+  - projects/trans-**/**
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -121,3 +122,13 @@ feed:
   content_limit: 140
   content_limit_delim: " "
   order_by: -date
+
+projects:
+  - name: 【前端】课程鉴赏
+    url: project-course-comments/index.html
+  - name: 【汇编】汇编沙盒
+    url: project-assymble-sandbox/index.html
+  - name: 【翻译】Frida 官方文档
+    url: trans-frida.re/index.html
+  - name: 【翻译】投影算法
+    url: trans-shadowcasting/index.html
