--- a/_config.ayer.yml
+++ b/_config.ayer.yml
@@ -4,9 +4,8 @@ menu:
   归档: /archives
   分类: /categories
   标签: /tags
-  翻译: /categories/翻译/
   gitbook: /gitbook/
-  项目: /categories/项目/
+  项目: /projects/
   友链: /friends/
   关于我: /about/
 
