增加door-in-the-woods

--- a/_config.yml
+++ b/_config.yml
@@ -132,3 +132,5 @@ projects:
     url: trans-frida.re/index.html
   - name: 【翻译】投影算法
     url: trans-shadowcasting/index.html
+  - name: 【逆向】door-in-the-woods-ext
+    url: door-in-the-woods-ext/index.html
